--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>View Groups 💜</title>
+<title>HIII ILII 💜</title>
 <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
 <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-firestore.js"></script>
@@ -87,7 +87,7 @@ h1 { color:#b344b3; margin-bottom:5px; }
 </style>
 <body>
 <header>
-  <h1>Groups 💜</h1>
+  <h1>HIIIII ILIIII💜</h1>
   <p>Click a group to view its items.</p>
 </header>
 
