--- a/group.html
+++ b/group.html
@@ -1,168 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Group Items 💜</title>
-<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
-<script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-firestore.js"></script>
-
-<script>
-
-const firebaseConfig = {
-  apiKey: "AIzaSyBOmm5l-irq0K9FfYi2soctX1fetc613Rc",
-  authDomain: "yuta-f0c26.firebaseapp.com",
-  projectId: "yuta-f0c26",
-  storageBucket: "yuta-f0c26.firebasestorage.app",
-  messagingSenderId: "947699204653",
-  appId: "1:947699204653:web:1f530ffc40c4f58c63aea4"
-};
-firebase.initializeApp(firebaseConfig);
-const db = firebase.firestore();
-</script>
-
-<style>
-body {
-  font-family: 'Quicksand', sans-serif;
-  background:#fdf6fb;
-  margin:0;
-  padding:20px;
-  color:#333;
-  overflow-x: hidden;
-}
-header {
-  text-align:center;
-  margin-bottom:30px;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  gap:10px;
-}
-h1 { color:#b344b3; margin-bottom:5px; }
-button {
-  padding:8px 15px;
-  border:none;
-  border-radius:6px;
-  background:#b344b3;
-  color:white;
-  cursor:pointer;
-  transition: background 0.2s;
-}
-button:hover { background:#9a2fa6; }
-
-#itemsContainer { 
-  display:flex; 
-  flex-direction:column; 
-  align-items:center; 
-  gap:15px; 
-  min-height:140px; 
-}
-
-/* Card styles */
-.list-card {
-  background:white;
-  border:2px solid #b344b3;
-  border-radius:12px;
-  padding:15px;
-  max-width:520px;
-  width:100%;
-  box-shadow:0 2px 6px rgba(0,0,0,0.06);
-  text-align:left;
-}
-
-/* Floating hearts */
-.heart {
-  position: fixed;
-  width: 18px;
-  height: 18px;
-  background: #b344b3;
-  transform: rotate(-45deg);
-  left: 50%;
-  top: 50%;
-  animation: float 4s linear infinite;
-  opacity: 0.8;
-  pointer-events: none;
-}
-.heart::before, .heart::after {
-  content: "";
-  position: absolute;
-  width: 18px;
-  height: 18px;
-  background: #b344b3;
-  border-radius: 50%;
-}
-.heart::before { top: -9px; left: 0; }
-.heart::after { left: 9px; top: 0; }
-@keyframes float {
-  0% { transform: translate(0,0) rotate(-45deg); opacity:0.85; }
-  100% { transform: translate(calc(-180px + 360px * var(--rand-x)), -560px) rotate(-45deg); opacity:0; }
-}
-</style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Group 💜</title>
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+  <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-firestore.js"></script>
+  <script src="firebase.js"></script>
 </head>
 <body>
-<header>
-  <h1 id="groupTitle">Group 💜</h1>
-  <button id="homeBtn">🏠 Home</button>
-</header>
+  <header>
+    <h1 id="groupTitle">Group</h1>
+    <button id="homeBtn">🏠 Home</button>
+  </header>
 
-<div id="itemsContainer"></div>
+  <main id="itemsContainer"></main>
 
-<script>
-document.addEventListener("DOMContentLoaded", () => {
-  const params = new URLSearchParams(window.location.search);
-  const groupId = params.get("id");
-  if (!groupId) { alert("Group not specified"); return; }
-
-  const groupTitle = document.getElementById("groupTitle");
-  const itemsContainer = document.getElementById("itemsContainer");
-  const homeBtn = document.getElementById("homeBtn");
-
-  homeBtn.addEventListener("click", () => { window.location.href = "index.html"; });
-
-  // Log page view
-  function logViewAction() {
-    db.collection("sections").doc(groupId).collection("views")
-      .add({ timestamp: firebase.firestore.FieldValue.serverTimestamp() })
-      .catch(err => console.error("Error logging view:", err));
-  }
-
-  // Fetch group and render list
-  db.collection("sections").doc(groupId).get().then(doc => {
-    if (!doc.exists) { itemsContainer.textContent = "No items found"; return; }
-
-    const items = Array.isArray(doc.data().items) ? doc.data().items : [];
-    groupTitle.textContent = doc.data().name || groupId;
-
-    if (!items.length) {
-      itemsContainer.textContent = "No items in this group yet.";
-      return;
-    }
-
-    items.forEach(txt => {
-      const div = document.createElement("div");
-      div.className = "list-card";
-      div.textContent = txt;
-      itemsContainer.appendChild(div);
-    });
-
-    logViewAction();
-  }).catch(err => {
-    console.error("Error fetching group:", err);
-    itemsContainer.textContent = "Error loading items.";
-  });
-
-  // Floating hearts
-  function createHeart() {
-    const heart = document.createElement("div");
-    heart.className = "heart";
-    heart.style.left = Math.random() * window.innerWidth + "px";
-    heart.style.setProperty('--rand-x', Math.random());
-    document.body.appendChild(heart);
-    setTimeout(() => heart.remove(), 4000);
-  }
-  setInterval(createHeart, 600);
-});
-</script>
+  <script src="group.js"></script>
 </body>
 </html>
