--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 </head>
 <body>
   <header>
-    <h1>Hiii Ili 💜</h1>
-    <p class="sub">Click a group to view its articles</p>
+    <h1>Hiii ili i tried i cant hate you 💜</h1>
+    <p class="sub">I'll keep updating this
+  </p>
   </header>
 
   <main id="groupsContainer"></main>
